# mqpp

./: CMakeLists.txt  README.md  cppcheck.sh
include/: Mqpp.h  MqttSocket.h  mqtt_311.h
interface/: mqpp.h
src/: Mqpp.cpp  MqttSocket.cpp  mqpp.cpp
test/: test_main.cpp
